--- a/clientes/templates/person.html
+++ b/clientes/templates/person.html
@@ -1,23 +1,41 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <a href="{% url 'logout' %}">Sair</a>
-    <ul>
-        {% for person in persons %}
-            <li>
-                <a href="{% url 'persons_update' person.id %}">{{ person.first_name }}</a>
-                <a href="{% url 'persons_delete' person.id %}">Deletar</a>
-            </li>
-        {% endfor %}
-    </ul>
-    <br>
-    <a href="{% url 'persons_new' %}">Novo Cliente</a>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title%} Administracao {% endblock%}
+
+{% block main %}
+
+    <div class="row">
+        <div class="col">
+
+        </div>
+        <div class="col-6">
+            <h3>Listagem de Clientes</h3>
+            <ul class="list-group">
+                {% for person in persons %}
+                    <li class="list-group-item">
+                        <a href="{% url 'persons_update' person.id %}">{{ person.first_name }}</a>
+                        <a href="{% url 'persons_delete' person.id %}" class="trash-item">
+                            <i class="fas fa-trash-alt"></i>
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+            <br>
+            <a href="{% url 'persons_new' %} " class="btn btn-warning">Novo Cliente</a>
+        </div>
+        <div class="col">
+            {% if user.is_authenticated %}
+                <p>Olá {{ user.username }} <a href="{% url 'logout' %}" class="badge badge-dark">Sair</a> </p>
+            {% endif %}
+        </div>
+    </div>
+
+{% endblock %}
+
+{% block footer %}
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">Projeto Plaquinha</span>
+        </div>
+    </footer>
+{% endblock %}
