--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -9,12 +9,12 @@
         </div>
         <div class="col-6">
             <h1>Seja Bem Vindo!</h1>
+            <br>
+            <h2>Ao Sistema Django do Suleiman Moraes</h2>
+            <br>
         </div>
         <div class="col-sm">
-            {% if user.is_authenticated %}
-                <p>Olá {{ user.username }}</p>
-                <a href="{% url 'logout' %}" class="alert-link">Sair</a>
-            {% else %}
+            {% if not user.is_authenticated %}
                 <a href="{% url 'login' %}" class="alert-link">Login</a>
             {% endif %}
         </div>
@@ -25,7 +25,12 @@
 {% block footer %}
     <footer class="footer">
         <div class="container">
-            <span class="text-muted">Projeto Plaquinha</span>
+            <span class="text-muted"><p>Projeto Plaquinha</p></span>
+            <span class="text-muted"><p>Feito por Suleiman Moraes</p></span>
+            <span class="text-muted"><p>email: suleimanmoraes@gmail.com</p></span>
+            <span class="text-muted"><p>GitHub: <a href="https://github.com/Suleiman-Moraes/gestao_clientes">https://github.com/Suleiman-Moraes</a></p></span>
+            <span class="text-muted"><p>URL do repositorio git: <a href="https://github.com/Suleiman-Moraes/gestao_clientes">https://github.com/Suleiman-Moraes/gestao_clientes</a></p></span>
+            <span class="text-muted"><p>URL do ambiente python: <a href="https://github.com/Suleiman-Moraes/gestao_clientes">https://github.com/Suleiman-Moraes/AmbientePython</a></p></span>
         </div>
     </footer>
 {% endblock %}
