--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,27 @@
     <title>{% block title%}{% endblock%}</title>
 </head>
 <body>
-
+    {% if user.is_authenticated %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'persons_list' %}">Listagem <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'persons_new' %}">Novo <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <p>Olá {{ user.username }} <a href="{% url 'logout' %}" class="badge badge-dark">Sair</a></p>
+                </form>
+            </div>
+        </nav>
+    <br>
+    {% endif %}
     <div class="container">
         <div class="jumbotron">
             {% block main %}
