--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -26,6 +26,8 @@
     <footer class="footer">
         <div class="container">
             <span class="text-muted"><p>Projeto Plaquinha</p></span>
+            <span class="text-muted"><p>Login: susu</p></span>
+            <span class="text-muted"><p>Senha: 12345678</p></span>
             <span class="text-muted"><p>Feito por Suleiman Moraes</p></span>
             <span class="text-muted"><p>email: suleimanmoraes@gmail.com</p></span>
             <span class="text-muted"><p>GitHub: <a href="https://github.com/Suleiman-Moraes/gestao_clientes">https://github.com/Suleiman-Moraes</a></p></span>
