--- a/clientes/templates/person_form.html
+++ b/clientes/templates/person_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
 
-{% block title%} Seja Bem vindo{% endblock%}
+{% block title%} Administrar{% endblock%}
 
 {% block main %}
 
@@ -12,4 +12,12 @@
         <button type="submit" class="btn btn-success">Salvar</button>
     </form>
 
+{% endblock %}
+
+{% block footer %}
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">Projeto Plaquinha</span>
+        </div>
+    </footer>
 {% endblock %}
