--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -17,7 +17,14 @@
 {% block footer %}
     <footer class="footer">
         <div class="container">
-            <span class="text-muted">Projeto Plaquinha</span>
+            <span class="text-muted"><p>Projeto Plaquinha</p></span>
+            <span class="text-muted"><p>Login: susu</p></span>
+            <span class="text-muted"><p>Senha: 12345678</p></span>
+            <span class="text-muted"><p>Feito por Suleiman Moraes</p></span>
+            <span class="text-muted"><p>email: suleimanmoraes@gmail.com</p></span>
+            <span class="text-muted"><p>GitHub: <a href="https://github.com/Suleiman-Moraes/gestao_clientes">https://github.com/Suleiman-Moraes</a></p></span>
+            <span class="text-muted"><p>URL do repositorio git: <a href="https://github.com/Suleiman-Moraes/gestao_clientes">https://github.com/Suleiman-Moraes/gestao_clientes</a></p></span>
+            <span class="text-muted"><p>URL do ambiente python: <a href="https://github.com/Suleiman-Moraes/gestao_clientes">https://github.com/Suleiman-Moraes/AmbientePython</a></p></span>
         </div>
     </footer>
 {% endblock %}
