--- a/clientes/templates/person.html
+++ b/clientes/templates/person.html
@@ -5,6 +5,21 @@
 {% block main %}
 
     <div class="row">
+        <div class="col-12">
+            <form class="form-group">
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">Pesquisa</span>
+                    </div>
+                    <input type="text" class="form-control" name="pesquisa" placeholder="Pesquisa"
+                           aria-label="Pesquisa" title="Digite para pesquisar" aria-describedby="basic-addon1">
+                    <button title="Click para realizar pesquisa" class="btn btn-warning">Pesquisar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col">
 
         </div>
